--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,6 @@ import(GenomicRanges)
 import(Rsamtools)
 import(SummarizedExperiment)
 import(ggplot2)
-import(magrittr)
 import(mclust)
 import(speedglm)
 import(splines)
@@ -26,6 +25,7 @@ importFrom(S4Vectors,na.omit)
 importFrom(S4Vectors,queryHits)
 importFrom(S4Vectors,runValue)
 importFrom(S4Vectors,subjectHits)
+importFrom(magrittr,"%>%")
 importFrom(methods,as)
 importFrom(methods,is)
 importFrom(methods,new)
